# slambook2

ch2/: CMakeLists.txt  helloSLAM  helloSLAM.cpp
ch3/useEigen/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp
ch7/: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch8/: CMakeLists.txt
ch9/: final.ply
project/0.1/include/myslam/: camera.h  common_include.h  frame.h
project/0.1/src/: camera.cpp  frame.cpp
project/0.2/: CMakeLists.txt
project/0.2/config/: default.yaml
project/0.2/include/myslam/: camera.h  frame.h  visual_odometry.h
project/0.2/src/: CMakeLists.txt  camera.cpp  frame.cpp  visual_odometry.cpp
project/0.2/test/: CMakeLists.txt  run_vo.cpp
